--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
         run: |
           export SF=$(ls | grep jar)
           mkdir -p guizhanlib-slimefun-cn/lib
+          mkdir -p guizhanlib-slimefun/lib
           cp ${SF}/${SF} guizhanlib-slimefun-cn/lib/slimefun.jar
           cp ${SF}/${SF} guizhanlib-slimefun/lib/slimefun.jar
 
