chore(CI): use our maven repo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,23 +35,6 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
-      - name: Download Slimefun from action artifact
-        uses: dawidd6/action-download-artifact@v9
-        with:
-          github_token: ${{secrets.GITHUB_TOKEN}}
-          workflow: dev-ci.yml
-          workflow_conclusion: success
-          repo: Craft233MC/Slimefun4
-          use_unzip: true
-
-      - name: Place local depends
-        run: |
-          export SF=$(ls | grep jar)
-          mkdir -p guizhanlib-slimefun-cn/lib
-          mkdir -p guizhanlib-slimefun/lib
-          cp ${SF}/${SF} guizhanlib-slimefun-cn/lib/slimefun.jar
-          cp ${SF}/${SF} guizhanlib-slimefun/lib/slimefun.jar
-
       - name: Build with Gradle
         run: ./gradlew clean shadowJar
 
@@ -59,6 +42,12 @@ jobs:
         run: |
           cd guizhanlib-all/build/libs
           echo "FILE=$(ls | grep jar)" >> $GITHUB_ENV
+
+      - name: Publish to repo
+        run: ./gradlew publish
+        env:
+          MAVEN_ACCOUNT: '${{ secrets.MAVEN_ACCOUNT }}'
+          MAVEN_PASSWORD: '${{ secrets.MAVEN_PASSWORD }}'
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
